<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">QuickLyric</string>
    <string name="title_lyrics">Lyrics</string>
    <string name="share">Share</string>
    <string name="drawer_open_desc">Navigation Drawer is open</string>
    <string name="drawer_closed_desc">Navigation Drawer is closed</string>
    <string name="no_results">No lyrics were found for this track</string>
    <string name="connection_error">Could not connect.</string>
    <string name="no_refresh">No need to refresh</string>
    <string name="search_hint">Search</string>
    <string name="cover_art_desc">Cover Art</string>
    <string name="pref_20min_ignore">Ignore long tracks</string>
    <string name="pref_20min_ignore_sum">Tracks longer than 20 minutes (like podcasts) are not considered songs</string>
    <string name="pref_scrobbling_category">Scrobbling</string>
    <string name="pref_about">About</string>
    <string name="send_feedback">Send feedback</string>
    <string name="local_title">Saved Lyrics</string>
    <string name="musicid_title">Identify Lyrics</string>
    <string name="settings_title">Settings</string>
    <string name="save_action">Save</string>
    <string name="lyrics_saved">Lyrics saved</string>
    <string name="lyrics_removed">Lyrics removed from storage</string>
    <string name="remove_action">Delete</string>
    <string name="pref_auto_refresh_title">Automatically refresh lyrics</string>
    <string name="pref_auto_refresh_summary">Lyrics will automatically refresh every time the music changes</string>
    <string name="local_empty_database">You haven\'t saved any lyrics yet.</string>
    <string name="pref_look_feel_category">Look and feel</string>
    <string name="welcome">Welcome to QuickLyric!</string>
    <string name="welcome2_sub">The lyrics you were looking for…\nRight here, right now.</string>
    <string name="apps_desc">Works with all your apps</string>
    <string name="apps_desc_sub">If you experience issues with your player (e.g. Poweramp, GoneMAD or Spotify), make sure it has \"Scrobbling\" or \"Broadcast Status\" enabled.</string>
    <string name="id_desc">Integration with your favorite MusicID apps.\n(Shazam™, SoundHound™, etc.)</string>
    <string name="id_desc_sub">1. Identify a song\n2. Share the results to QuickLyric\n3. Enjoy your lyrics</string>
    <string name="refresh_desc">When the song has changed…</string>
    <string name="refresh_desc_sub">Tap this button. QuickLyric will do the rest.</string>
    <string name="pref_more_category">More</string>
    <string name="first_launch">Start playing music on your device and hit refresh.</string>
    <string name="share_prompt">Import from MusicID</string>
    <string name="undo">Undo</string>
    <string name="beta_dialog_content">
1) Join the Google+ Community: \nhttps://plus.google.com/communities/115504114424315189412\n
2) Sign up for the Beta: \nhttps://play.google.com/apps/testing/com.geecko.QuickLyric
    </string>
    <string name="pager_arrow"><![CDATA[>]]></string>
    <string name="skip">Skip</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_notifications">Notifications</string>
    <string name="defaut_theme">Amber</string>
    <string name="dark_theme">Dark</string>
    <string name="pref_notifications_sum">Get a discreet notification when the song changes</string>
    <string name="pref_auto_save">Automatically save lyrics</string>
    <string name="pref_auto_save_sum">All lyrics will be stored on your device</string>
    <string name="pref_night_mode">Night Mode</string>
    <string name="pref_night_mode_sum">Display a dark background at night</string>
    <string name="scan_action">Scan Music</string>
    <string name="warning">Warning</string>
    <string name="content_providers_title">Scan music from…</string>
    <string name="dl_progress">Downloading lyrics… %1$d/%2$d</string>
    <string name="dl_finished">Download finished</string>
    <string name="pref_providers">Additional lyrics sources</string>
    <string name="pref_providers_sum">The more you select, the longer each download will take</string>
    <string name="pref_beta">Become a beta tester</string>
    <string name="pref_beta_sum">Get updates (new features, bug fixes, …) faster and report back via email</string>
    <string name="scan_error_no_content">Could not find any music</string>
    <string name="no_results_why"><u>Why?</u></string>
    <string name="why_popup_text"><![CDATA[
You were looking for the lyrics of \"%1$s\" by %2$s. Unfortunately QuickLyric couldn\'t find them… <br/><br/>
A few possible reasons why:<br/>
<br/>
• Is your music <strong>tagged</strong> properly? QuickLyric cannot recognize tracks that aren\'t tagged.<br/>
• Check if your connection is working.<br/>
• Perhaps this song isn\'t part of the main catalog. Have you checked the <strong>additional providers</strong> in the settings?<br/>
• You might have found a bug. If so, please email me.<br/>
• Check if the date & time in of your device are set correctly.<br/>
]]></string>
    <string name="why_popup_title">Why doesn\'t it work?</string>
    <string name="download_category">Downloads</string>
    <string name="wearable_prompt">Open on wearable</string>
    <string name="pref_opendyslexic">Use OpenDyslexic font</string>
    <string name="pref_opendyslexic_sum">Use a special font created for readers with a reading disability</string>
    <string name="wrong_musicID">Unsupported MusicID service</string>
    <string name="pref_issues_sum">contact@quicklyric.be (English only)</string>
    <string name="ignore_id3_toast">Tap the Refresh button to force a download</string>
    <string name="from_id3">(Lyrics extracted from audio file)</string>
    <string name="nighttime_start_dialog_title">Nighttime start</string>
    <string name="nighttime_end_dialog_title">Nighttime end</string>
    <string name="pref_force_screen_sum">Prevent the screen from turning off while reading lyrics</string>
    <string name="pref_force_screen_on">Force screen on</string>
    <string name="scan_error_permission_denied">QuickLyric has been denied permission to scan your music</string>
    <string name="id3_write_error">Failed to edit song metadata</string>
    <string name="id3_write_success">Song metadata successfully edited</string>
    <string name="id3_read_rationale">QuickLyric needs this permission to read the lyrics and artworks available on this device</string>
    <string name="permission_denied">(permission denied)</string>
    <string name="id3_write_permission_error">App needs to be restarted to gain write permission</string>
    <string name="resync_action">Resync</string>
    <string name="uri_storage">This device</string>
    <string name="uri_gmusic">Your Google Play Music library</string>
    <string name="uri_spotify">Your Spotify Library</string>
    <string name="spotify_library">Your saved tracks</string>
    <string name="spotify_playlists">Your playlists</string>
    <string name="source_punk">Punk Rock</string>
    <string name="source_metal">Metal</string>
    <string name="source_hip_hop">Hip Hop</string>
    <string name="source_EDM">Electronic Dance Music</string>
    <string name="source_japanese">Japanese</string>
    <string name="source_sync">Synchronized Lyrics</string>
    <string name="spotify_connection">Connecting to Spotify…</string>
    <string name="full_text_action">Full text</string>
    <string name="artworks_pref_title">Automatic artwork download</string>
    <string name="artworks_pref_sum">May result in mobile data charges</string>
    <string name="pref_lrc_sum">Highlight the words that are being sung - not all our lyrics are synchronized</string>
    <string name="pref_lrc">Synchronized lyrics</string>
    <string name="red_theme">Red</string>
    <string name="purple_theme">Purple</string>
    <string name="indigo_theme">Indigo</string>
    <string name="green_theme">Green</string>
    <string name="lime_theme">Lime</string>
    <string name="brown_theme">Brown</string>
    <string name="ad_supported_title">QuickLyric is ad-supported</string>
    <string name="ad_supported_text">Ads allow us to pay the artists and rightholders for their work.\nWe hope you enjoy using QuickLyric!</string>
    <string name="about_read_ToS">Read our Terms of Service</string>
    <string name="about_product_tour">Product Tour</string>
    <string name="nl_title">One last thing.</string>
    <string name="nl_instructions">For QuickLyric to work with all players, some settings need to be changed.</string>
    <string name="nl_settings_link">Enable music access</string>
    <string name="floating_settings_link">Enable floating lyrics (optional)</string>
    <string name="changelog">What\'s new?</string>
    <string name="rate_us">Rate the app</string>
    <string name="translate_us">Translate the app</string>
    <string name="romanize">Romanize</string>
    <string name="reset">Reset</string>
    <string name="musicid_no_match">No match</string>
    <string name="notification_access">Notification Access</string>
    <string name="pref_lyrics_overlay_name">Lyrics overlay</string>
    <string name="pref_lyrics_overlay_sum">A floating window that makes lyrics available outside the app</string>
    <string name="notification_access_explanation"><![CDATA[
This permission is only needed so that QuickLyric can access your music metadata.<br/>
QuickLyric is not interested in reading your notifications and our privacy policy prevents us to.<br/>
The good news is that QuickLyric being open source, anyone can verify that for themselves! 😊<br/><br/>
We thank you for your understanding!<br/><br/>
- The QuickLyric Team
]]></string>
    <string name="premium_title">Get Premium (Free Trial!)</string>
    <string name="remove_ads_title">Remove ads</string>
    <string name="subscription_monthly">Monthly</string>
    <string name="subscription_yearly">Yearly</string>
    <string name="premium_sum_incent">Get Premium to support the artists &amp; the team behind QuickLyric!</string>
    <string name="premium_ads_incent">No more ads!</string>
    <string name="premium_themes_incent">*7* new themes</string>
    <string name="premium_night_mode_incent">A *night mode* to rest your eyes at night</string>
    <string name="premium_android_wear">Support for *Android Wear* watches</string>
    <string name="premium_doubt">Unsure about getting a subscription? Shoot us an email: contact@quicklyric.be</string>
    <string name="premium_thanks">Thanks for your support!</string>
    <string name="about_crowdin">Help translate the app on Crowdin</string>
    <string name="online_title">Online catalog</string>
    <string name="yearly_sub_template">%s/year</string>
    <string name="monthly_sub_template">%s/month</string>
    <string name="buy_sub">Buy</string>
    <string name="client_version_error">Please update the app</string>
    <string name="why_is_this_a_subscription">Why is this a subscription?</string>
    <string name="why_sub_explanation"><![CDATA[<p>Most of the subscription revenues go to the artists and right holders. Paying a one-time fee to get QuickLyric Premium would be like paying Spotify a couple dollars and getting Premium for the rest of your life. It is unfortunately not possible.</p>
    <p>If we took your money and you kept using the app for years, we\'d still need to pay the right holders for your consumption.</p>
    Please understand that it\'s a requirement of the Music Industry that things work this way.]]>
    </string>
    <string name="vote_action">Vote</string>
    <string name="user_submission_dialog_title">Rate these lyrics</string>
    <string name="vote_for">These lyrics are correct</string>
    <string name="vote_against">These lyrics are wrong</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="good_xp_prompt_msg">Do you love QuickLyric?</string>
</resources>