<!--
  ~ /**
  ~  * This file is part of QuickLyric
  ~  * Created by geecko
  ~  *
  ~  * QuickLyric is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * QuickLyric is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with QuickLyric.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_vote"
        android:icon="@drawable/ic_vote"
        android:orderInCategory="5"
        android:visible="false"
        android:title="@string/vote_action"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/save_action"
        android:icon="@drawable/ic_save"
        android:orderInCategory="10"
        android:title="@string/save_action"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/romanize_action"
        android:orderInCategory="15"
        android:title="@string/romanize"
        android:icon="@drawable/ic_menu_romanize"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/resync_action"
        android:orderInCategory="20"
        android:title="@string/resync_action"
        app:showAsAction="never"/>

    <item
        android:id="@+id/convert_action"
        android:orderInCategory="20"
        android:title="@string/full_text_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/share_action"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="30"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>