<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * This file is part of QuickLyric
  ~  * Copyright © 2017 QuickLyric SPRL
  ~  *
  ~  * QuickLyric is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * QuickLyric is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with QuickLyric.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/upper_margin"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:ignore="RtlCompat">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/why_notif_access_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/no_results_why"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/material_white"
        android:onClick="whyNotificationsPopUp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:id="@+id/NL_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/why_notif_access_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="#3000"
        android:elevation="6dp"
        android:foreground="?selectableItemBackground"
        android:padding="10dp">

        <ImageView
            android:id="@+id/NL_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_dialog_alert"/>

        <TextView
            android:id="@+id/NL_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/NL_icon"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/nl_settings_link"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textStyle="bold"/>
    </RelativeLayout>


    <ImageView
        android:id="@+id/redGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/intro_5_gear"
        android:translationX="@dimen/redGear_X"
        android:translationY="@dimen/redGear_Y"/>

    <ImageView
        android:id="@+id/blueGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/intro_5_gear_b"
        android:translationX="@dimen/bluegear_X"
        android:translationY="@dimen/bluegear_Y"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/nl_title"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView"
        android:layout_alignRight="@id/textView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:paddingBottom="15dp"
        android:text="@string/nl_instructions"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_marginBottomPercent="2%"/>


</android.support.percent.PercentRelativeLayout>